# proton-sdk-rs2

./: Cargo.toml  README.md
.cargo/: config.toml
crates/proton-drive/: Cargo.toml
crates/proton-sdk-rs2/: Cargo.toml  build.rs
crates/proton-sdk-rs2/protos/: proton.sdk.proto
crates/proton-sdk-rs2/src/: api.rs  auth.rs  cache.rs  client.rs  lib.rs  secret.rs  session.rs
crates/proton-sdk-rs2/src/api/: response.rs
crates/proton-sdk-sys/: Cargo.toml
