
[workspace]
package.version = "0.1.0"
package.edition = "2024"
package.license = "MIT"
package.repository = "https://github.com/tirbofish/proton-sdk-rs2"
package.readme = "README.md"
package.authors = ["Thribhu K <4tkbytes@pm.me>"]

resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
semver = "1.0"
anyhow = "1.0"
prost-build = "0.14"
prost = "0.14"
prost-types = "0.14"
